Added Atuh widget

--- a/Gravity-tube/src/Components/Navigation/Navbar.css
+++ b/Gravity-tube/src/Components/Navigation/Navbar.css
@@ -40,7 +40,7 @@
 .navbar--icons{
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 1.1rem;
 }
 .navbar{
