--- a/Gravity-tube/src/Components/Sidebar/Component/SidebarRow/SidebarRow.css
+++ b/Gravity-tube/src/Components/Sidebar/Component/SidebarRow/SidebarRow.css
@@ -14,7 +14,7 @@
     font-weight: 500;
 }
 .sidebar-row:hover{
-    background-color: lightgrey;
+    background-color: #4a4a4a;
     cursor: pointer;
 }
 .sidebar-row:hover > .sidebar-icon{
@@ -24,7 +24,7 @@
     font-weight: bold;
 }
 .sidebar-row.selected{
-    background-color: lightgray;
+    background-color: #4a4a4a;
 }
 .sidebar-row.selected > .sidebar-title{
     font-weight: bold;
