--- a/Gravity-tube/src/Components/Video-Listing/VideoListing.css
+++ b/Gravity-tube/src/Components/Video-Listing/VideoListing.css
@@ -3,10 +3,12 @@
   background-color: #f9f9f9;
   padding: 40px 20px;
   padding-bottom: 0;
+  background-color: #131319;
 }
 .video-box > h2{
     margin-left: 5px;
     margin-bottom: 20px;
+    color: white;
 }
 .videos-container{
   display: flex;
