--- a/Gravity-tube/src/Components/Sidebar/Sidebar.css
+++ b/Gravity-tube/src/Components/Sidebar/Sidebar.css
@@ -3,14 +3,15 @@
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .sidebar-box{
-    flex: 0.18;
-    background-color: #131319;
+    flex: 0.15;
+    background-color: #212121;
     color: white;
+    padding: 1rem;
 }
 .sidebar-box > hr {
     height: 1px;
     border: 0;
-    background-color: lightgrey;
+    background-color: #6b6b6b;
     margin-top: 10px;
     margin-bottom: 10px;
 }
