--- a/Gravity-tube/src/Components/Video-Listing/VideoListing.css
+++ b/Gravity-tube/src/Components/Video-Listing/VideoListing.css
@@ -1,9 +1,10 @@
 .video-box{
-  flex: 0.82;
+  flex: 0.85;
   background-color: #f9f9f9;
   padding: 40px 20px;
   padding-bottom: 0;
-  background-color: #131319;
+  background-color: #212121;
+  border-left: 2px solid #454545;
 }
 .video-box > h2{
     margin-left: 5px;
