--- a/Gravity-tube/src/Components/VideoCard/VideoCard.css
+++ b/Gravity-tube/src/Components/VideoCard/VideoCard.css
@@ -6,11 +6,18 @@
 }
 .videoCard{
     margin-bottom: 2rem;
-    width: 16rem;
+    width: 18rem;
+}
+.videoCard:hover{
+    cursor: pointer;
 }
 .card-image{
-    height: 10rem;
-    width: 18rem;
+    height: 12rem;
+    width: 20rem;
+    border-radius: 4px;
+}
+.card-image:hover{
+    opacity: .8;
 }
 .videoCard--info{
     width: 17rem;
@@ -19,13 +26,22 @@
 }
 .videoCard--logo--txt{
     display: flex;
-    width: 18rem;
+    width: 20rem;
+}
+.videoCard--text{
+    margin-top: 0.5rem;
 }
 .videoCard--views{
-   margin-left: 3.4rem;
+    margin-left: 3.4rem;
+    color: #9C9C9C;
+    margin-top: 0.6rem;
+    width: 17rem;
+    font-size: 1.1rem;
+   
 }
 .ml{
     margin-left: 0.7rem;
+    color: white;
 }
 .live-tag{
     border: 2px solid red;
@@ -38,4 +54,11 @@
 }
 .timestamp{
     margin-bottom: 0.5rem;
+}
+.more-option-btn{
+    visibility: hidden;
+}
+.videoCard--logo--txt:hover > .more-option-btn{
+ visibility: visible;
+
 }
