fix video player

--- a/Gravity-tube/src/Components/Navigation/Navbar.css
+++ b/Gravity-tube/src/Components/Navigation/Navbar.css
@@ -15,7 +15,8 @@
     margin-left: 2rem;
     color: rgb(255, 255, 255);
     font-weight: 600;
-    color: red;
+    color: #00d4c1;
+    font-size: 1.1rem;
     /* background-color: #d00b0b;; */
     /* padding: .3rem; */
     /* font-size: 11px; */
