--- a/Gravity-tube/src/Components/Sidebar/Component/SidebarRow/SidebarRow.css
+++ b/Gravity-tube/src/Components/Sidebar/Component/SidebarRow/SidebarRow.css
@@ -19,7 +19,7 @@
     border-radius: 12px;
 }
 .sidebar-row:hover > .sidebar-icon{
-    color: red;
+    color: #00d4c1;
 }
 .sidebar-row:hover > .sidebar-title{
     font-weight: bold;
@@ -32,5 +32,5 @@
     font-weight: bold;
 }
 .sidebar-row.selected > .sidebar-icon{
-    color: red;
+    color: #00d4c1;
 }
