--- a/Gravity-tube/src/Pages/SingleVideoPage/Component/VideoDetailPage.css
+++ b/Gravity-tube/src/Pages/SingleVideoPage/Component/VideoDetailPage.css
@@ -7,7 +7,7 @@
 }
 .video-info-container{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 75% 25%;
 }
 .video-info{
     height: 8rem;
@@ -37,13 +37,14 @@
 }
 .views{
     display: flex;
-    gap: 25rem;
+    gap: 38rem;
     margin-top: 0.8rem;
+    font-size: 1.2rem;
 }
 .action-icons{
     display: flex;
     align-items: center;
-    gap: 0.8rem;
+    gap: 1.2rem;
 }
 .action-icons > span{
     margin-left: -0.5rem;
@@ -57,6 +58,7 @@
 }
 .channel-name{
     margin-top: 0.3rem;
+    margin-left: 1rem;
 }
 
 /* simialr video card */
