--- a/Gravity-tube/src/Components/Video-Listing/VideoListing.css
+++ b/Gravity-tube/src/Components/Video-Listing/VideoListing.css
@@ -3,7 +3,7 @@
   background-color: #f9f9f9;
   padding: 40px 20px;
   padding-bottom: 0;
-  background-color: #212121;
+  background-color: #1c1c1c;
   border-left: 2px solid #454545;
 }
 .video-box > h2{
@@ -15,4 +15,31 @@
   display: flex;
   flex-wrap: wrap;
   gap: 3rem;
+  overflow: auto;
+  /* height: 48.7rem; */
+  height: calc(100vh - 10.2rem);
+}
+
+/* scroll bar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: #6bbab4; */
+  background: #46706d;  
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  /* background: #46706d; */
+  background: #6bbab4;
 }
