--- a/Gravity-tube/src/Components/VideoCard/VideoCard.css
+++ b/Gravity-tube/src/Components/VideoCard/VideoCard.css
@@ -20,13 +20,13 @@
     opacity: .8;
 }
 .videoCard--info{
-    width: 17rem;
+    width: 23rem;
     background-color: transparent;
     color: #e5e5e5;
 }
 .videoCard--logo--txt{
     display: flex;
-    width: 20rem;
+    width: -webkit-fill-available;
 }
 .videoCard--text{
     margin-top: 0.5rem;
