--- a/Gravity-tube/src/Pages/Homepage/HomePage.css
+++ b/Gravity-tube/src/Pages/Homepage/HomePage.css
@@ -1,5 +1,28 @@
 .body-content{
     display: flex;
-    height: 160rem;
+    height: fit-content;
     background-color: #212121;
 }
+/* scroll bar */
+/* width */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #212121;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    /* background: #6bbab4; */
+    background: #46706d;  
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    /* background: #46706d; */
+    background: #6bbab4;
+  }
