--- a/Gravity-tube/src/Components/Navigation/Navbar.css
+++ b/Gravity-tube/src/Components/Navigation/Navbar.css
@@ -1,6 +1,8 @@
 .navbar--left{
     display: flex;
     align-items: center;
+    margin-left: 1.4rem;
+    
 }
 .navbar--logo{
     display: flex;
@@ -36,11 +38,16 @@
     /* border: 1px solid grey; */
     width: 30%;
     margin-right: 10rem;
+    border: 1px solid #616161;
 }
 .navbar--input>input{
     flex:1;
     border: none;
-    padding: 0.4rem;
+    padding: 0.7rem;
+    background-color: #253331;
+    outline: none;
+    color: white;
+    font-size: 1.1rem;
 }
 .navbar--icons{
     display: flex;
@@ -56,16 +63,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 12px;
+    padding: 1rem;
     border-bottom: 1px solid #4a4a4a;;
     background-color: #212121;
     color: white;
 }
 .search-btn{
     border: none;
-    width: 12%;
-    border-left: 1px solid #d1cbcb;
+    width: 16%;
+    border-left: 1px solid #636363;
     background-color: #ebebeb;
-    color: grey;
-    padding: 0.3rem;
+    color: rgb(255, 255, 255);
+    padding: 0.8rem;
+    height: 3rem;
+    background-color: #253331;
 }
