--- a/Gravity-tube/src/Components/Navigation/Navbar.css
+++ b/Gravity-tube/src/Components/Navigation/Navbar.css
@@ -44,7 +44,7 @@
     flex:1;
     border: none;
     padding: 0.4rem;
-    background-color: #253331;
+    background:transparent;
     outline: none;
     color: white;
     font-size: 1.1rem;
