--- a/Gravity-tube/src/Components/Sidebar/Sidebar.css
+++ b/Gravity-tube/src/Components/Sidebar/Sidebar.css
@@ -15,3 +15,20 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.link{
+    text-decoration: none;
+    color: white;
+}
+
+@media screen and (max-width:470px) {
+  
+    .sidebar-box {
+        display: flex;
+        overflow: auto;
+    }
+   
+    .body-content{
+        display: block;
+        height: 100%;
+    }
+}
