--- a/Gravity-tube/src/Components/Video-Listing/VideoListing.css
+++ b/Gravity-tube/src/Components/Video-Listing/VideoListing.css
@@ -14,7 +14,7 @@
 .videos-container{
   display: flex;
   flex-wrap: wrap;
-  gap: 4rem;
+  gap: 1rem;
   overflow: auto;
   scroll-behavior: smooth;
   /* height: 48.7rem; */
@@ -43,4 +43,33 @@
 ::-webkit-scrollbar-thumb:hover {
   /* background: #46706d; */
   background: #6bbab4;
+}
+@media screen and (max-width: 1410px) {
+  .videos-container {
+    gap: 0.8rem;
+}
+.card-image {
+  width: 17rem;
+  object-fit: contain;
+}
+.videoCard--info {
+  width: 16rem;
+}
+.ml {
+  font-size: 0.8rem;
+}
+.videoCard--views {
+  width: 12rem;
+  font-size: 1rem;
+}
+}
+@media screen and (max-width: 1370px) {
+
+.card-image {
+  height: 10rem;
+  width: 16rem;
+  object-fit: contain;
+  border-radius: 4px;
+}
+
 }
