--- a/Gravity-tube/src/Components/VideoCard/VideoCard.css
+++ b/Gravity-tube/src/Components/VideoCard/VideoCard.css
@@ -66,7 +66,7 @@
 /* MORE Option MODAL */
 
 .options{
-    padding: 0.5rem 1rem;
+    padding: 0.5rem .5rem;
     display: flex;
     align-items: center;
     grid-gap: 0.7rem;
@@ -77,13 +77,15 @@
     width: 16rem;
 }
 .options:hover{
-    background-color: #5e5b5b;
+    background-color: #3e3e3e;
+}
+.options:hover .options-btn{
+    transition: 0.8s;
+    color: #dd2c2c;
 }
 .more-option-box{
     position: absolute;
     z-index: 10;
-    /* top: 30px;
-    left: 100%; */
     top: 78%;
     left: 6%;
     display: flex;
