--- a/Gravity-tube/src/Pages/WatchLater/Components/WatchlaterVideos.css
+++ b/Gravity-tube/src/Pages/WatchLater/Components/WatchlaterVideos.css
@@ -4,6 +4,7 @@
 }
 
 .watch-later-box{
+    flex: 1;
     color: white;
     display: grid;
     grid-template-columns: 30% 70%;
@@ -92,6 +93,29 @@ hr{
 }
 .list-num{
     list-style: decimal;
+}
+.clear-history-btn{
+    display: flex;
+    align-items: center;
+    grid-gap: 0.5rem;
+    gap: 0.5rem;
+    margin-left: auto;
+    background: transparent;
+    border: none;
+    font-weight: 500;
+    color: #ababab;
+    padding: 10px 25px;
+    border: 2px solid #016158;
+    border-radius: 5px;
+}
+.clear-history-btn:hover{
+    transition: .6s;
+    /* background-color: #1b2524; */
+    border: 2px solid #811b1b;
+}
+.clear-history-btn:hover >.delete-icon{
+    transition: .6s;
+    color: #f24545;
 }
 
 
