--- a/Gravity-tube/src/Pages/WatchLater/Components/WatchlaterVideos.css
+++ b/Gravity-tube/src/Pages/WatchLater/Components/WatchlaterVideos.css
@@ -118,6 +118,63 @@ hr{
     color: #f24545;
 }
 
+/* playlist card area div*/
+.playlist-card-area{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: flex-start;
+}
+.playlist-info{
+    position: relative;
+    display: flex;
+    align-items: center;
+    grid-gap: 2rem;
+    gap: 9.8rem;
+}
+.playlist-card-area:hover{
+    cursor: pointer;
+}
+.playlist-card-area:hover > .playlist-info {
+    visibility: visible;
+    cursor: pointer;
+}
+
+/* PLATLIST TAG */
+.playlist-tag{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 8px;
+    background-color: #0096886b;
+    /* border: 2px solid #0096888c; */
+    width: fit-content;
+    padding: 0.3rem 1rem;
+    border-radius: 5px;
+}
+
+/* PLAYLIST MENU OPTIONS  */
+.menu-opt{
+    position: absolute;
+    top: 83%;
+    left: 25%;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #3e3e3e8f;
+    width: fit-content;
+    padding: 0.6rem 0.8rem;
+}
+.menu-opt:hover{
+    cursor: pointer;
+    background-color: #262727;
+}
+.menu-opt:hover > .menu-det-btn{
+    cursor: pointer;
+    color: red;
+    background-color: #262727;
+}
 
 /* @media screen and (max-width:1440px){
     .sidebar-box {
