--- a/Gravity-tube/src/Pages/AuthWidget/Login/Login.css
+++ b/Gravity-tube/src/Pages/AuthWidget/Login/Login.css
@@ -11,7 +11,7 @@
     display: flex;
 }
 .login-content {
-    background-color: #dddddd;
+    background-color: #ffffffd6;
     margin-left: 2rem;
     display: flex;
     align-items: center;
