--- a/Gravity-tube/src/Components/Sidebar/Sidebar.css
+++ b/Gravity-tube/src/Components/Sidebar/Sidebar.css
@@ -23,8 +23,28 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
 @media screen and (max-width:470px) {
   
     .sidebar-box {
-        display: flex;
+        position: absolute;
         overflow: auto;
+        width: 26rem;
+    }
+    .video-box {
+        margin-top: 8rem;
+    }
+   
+    .body-content{
+        display: block;
+        height: 100%;
+    }
+}
+@media screen and (max-width: 320px) {
+  
+    .sidebar-box {
+        position: absolute;
+        overflow: auto;
+        width: 20rem;
+    }
+    .video-box {
+        margin-top: 8rem;
     }
    
     .body-content{
