--- a/Gravity-tube/src/Components/Sidebar/Sidebar.css
+++ b/Gravity-tube/src/Components/Sidebar/Sidebar.css
@@ -20,7 +20,7 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
     color: white;
 }
 
-@media screen and (max-width:470px) {
+/* @media screen and (max-width:470px) {
   
     .sidebar-box {
         position: absolute;
@@ -35,20 +35,4 @@ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubun
         display: block;
         height: 100%;
     }
-}
-@media screen and (max-width: 320px) {
-  
-    .sidebar-box {
-        position: absolute;
-        overflow: auto;
-        width: 20rem;
-    }
-    .video-box {
-        margin-top: 8rem;
-    }
-   
-    .body-content{
-        display: block;
-        height: 100%;
-    }
-}
+} */
